--- a/projet-me/package.json
+++ b/projet-me/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.8.0",
     "sass": "^1.62.0",
     "scss": "^0.2.4",
+    "swiper": "^9.2.2",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
